@@ -13,6 +13,7 @@
 > (add dev control) Remote Control should act as an indicator as well as controller
 > Added dev control for timeline length
 > Added developer controls to simulate options for returning to record mode
+> Improved performance during record, motion is much smoother
 
 # 1.20.17 (27410) 01-17-2009
 # 1.20.16 (27408) 01-17-2009
